# one-brc

./: Cargo.toml  README.md  stations.txt  stations2.txt
benches/: back-scan-n.rs  numbers.rs  stations-hash.rs
examples/: mmap-memchr-count.rs  mmap-split-count.rs  mmap-timing.rs  mmap2-memchr-count.rs  mmap2-split-count.rs  mmap2-timing.rs  read-file-timing.rs
src/: lib.rs  main.rs  result.rs
tests/: stations-temp.rs  stations-temp2.rs
