[package]
name = "one-brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
memchr = "2.7"
memmap2 = "0.9"
rand = "0.8"

[dev-dependencies]
rust_decimal = "1.36"
sysinfo = "0.32"
linereader = "0.4"
memory-stats = "1.2"
simdutf8 = "0.1"
